--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,56 +13,56 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container-fluid mx-4">
-            <div>
-                <a class="navbar-brand" href="#">
-                    <img src="images/70_Rojo.jpg" alt="" width="50">
-                </a>
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/SpaceLAB TITULO.png" alt="" width="240">
-                </a>
-            </div>
-            <button class="navbar-toggler" 
-                    type="button"  
-                    data-bs-toggle="collapse" 
-                    data-bs-target="#navbarSupportedContent" 
-                    aria-controls="navbarSupportedContent" 
-                    aria-expanded="false" 
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse flex-lg justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav text-uppercase">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="integrantes.html">Integrantes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="proyectos.html">Proyectos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="resultados.html">Resultados</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-                    </li>                      
-                </ul>
-              </div>
-            </div>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0" id="menu">
+    <div class="container-fluid fondo-sm">
+        <div class="logos-nav"> 
+            <a class="navbar-brand" href="https://www.univalle.edu.co">
+                <img src="images/70_Rojo.jpg" alt="" width="45" class="uv-nav">
+            </a>
+            <a class="navbar-brand" href="index.html">
+                <img src="images/SpaceLAB TITULO.png" alt="" width="250" class="sp-nav pt-2">
+            </a>
         </div>
-    </nav>
+        <button class="navbar-toggler" 
+                type="button"  
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex-lg justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav text-uppercase">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="integrantes.html">Integrantes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="proyectos.html">Proyectos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="resultados.html">Resultados</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                </li>                      
+            </ul>
+          </div>
+        </div>
+    </div>
+  </nav>
 
 <!--CONTACT0-->
 
-<div class="container-fluid vh-25 p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
-  <h1 class="text-white w-75">Contacto</h1> 
+<div class="container-fluid tit-offset-tit p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
+  <h1 class="text-white width-sm">Contacto</h1> 
 </div>
 
-<section>
-  <div class="container p-0 my-6 w-75">
+<section class="cuerpo">
+  <div class="container-fluid p-0 mt-4 mb-5 width-sm">
     <div class="p-0 mb-5">
       <h2 class="text-info mb-5">Director del Proyecto</h2>
       <p class="text-white def">Daniel Gómez Pizano</p>
@@ -80,23 +80,26 @@
   </div>
       
   <!--FOOTER-->
-  <div class="container-fluid d-flex justify-content-center p-0 mx-0">
-    <div class="row d-flex justify-content-center">
-      <div class="col">
-        <div class="col text-white text-center">
-          <img src="images/SpaceLAB TITULO.png" width="500" alt="">
-          <p>Daniel Gómez Pizano</p>
-          <p>daniel.gomez@correounivalle.edu.co</p>
-          <p>Universidad del Valle</p>
-          <p>Cali, Colombia</p>
+
+  <div>
+    <div class="container-fluid d-flex justify-content-center p-0 mx-0">
+      <div class="row d-flex justify-content-center">
+        <div class="col">
+          <div class="col text-white text-center">
+            <img src="images/SpaceLAB TITULO.png" width="500" alt="" class="sp-footer">
+            <p>Daniel Gómez Pizano</p>
+            <p>daniel.gomez@correounivalle.edu.co</p>
+            <p>Universidad del Valle</p>
+            <p>Cali, Colombia</p>
+          </div>
         </div>
       </div>
     </div>
+    <footer>
+      <p class="text-white text-center">© Copyright 2022 - SPACELAB. Todos los derechos reservados.</p>
+    </footer>
   </div>
-  <footer>
-    <p class="text-white text-center">© Copyright 2022 - SPACELAB. Todos los derechos reservados.</p>
-  </footer>
-  </div>
+</section>
 </section>
 
 <!--BACKTOTOP-->
