--- a/proyecto2.html
+++ b/proyecto2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,25 +13,25 @@
 </head>
 <body>
     
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid mx-4">
-      <div>
-          <a class="navbar-brand" href="#">
-              <img src="images/70_Rojo.jpg" alt="" width="50">
-          </a>
-          <a class="navbar-brand" href="index.html">
-              <img src="images/SpaceLAB TITULO.png" alt="" width="240">
-          </a>
-      </div>
-      <button class="navbar-toggler" 
-              type="button"  
-              data-bs-toggle="collapse" 
-              data-bs-target="#navbarSupportedContent" 
-              aria-controls="navbarSupportedContent" 
-              aria-expanded="false" 
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-      </button>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0" id="menu">
+    <div class="container-fluid fondo-sm">
+        <div class="logos-nav"> 
+            <a class="navbar-brand" href="https://www.univalle.edu.co">
+                <img src="images/70_Rojo.jpg" alt="" width="45" class="uv-nav">
+            </a>
+            <a class="navbar-brand" href="index.html">
+                <img src="images/SpaceLAB TITULO.png" alt="" width="250" class="sp-nav pt-2">
+            </a>
+        </div>
+        <button class="navbar-toggler" 
+                type="button"  
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse flex-lg justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav text-uppercase">
                 <li class="nav-item">
@@ -58,36 +58,36 @@
 <!--PROYECTO 1-->
 
 <section>
-  <div class="container-fluid p-0 my-6 w-75">
-    <div class="p-0">
-      <h2 class="mb-5 text-white vh-25 p-0 d-flex justify-content-center text-center align-items-end">Diseño por desempeño de un hábitat lunar sometido a cargas sísmicas.</h2>
-      <div class="d-flex justify-content-around mx-auto">
-        <img src="images/proyecto11.png" width="300px" class="rounded-5" alt="">
-        <img src="images/proyecto2.png" width="350px" class="rounded-5" alt="">
-      </div>
-      <h4 class="text-start text-white fw-bold mt-2">Resumen:</h4>
-      <p class="text-white def">El creciente interés de la humanidad por la colonización de cuerpos extraterrestres ha propuesto un reto para los ingenieros al tener que adaptar sus conocimientos en la concepción de diseños de hábitats económicos, confortables y seguros. La Luna por ser el cuerpo celeste más cercano a la Tierra se ha convertido en el primer candidato a ser colonizado por el hombre. Futuros hábitats permanentes en la Luna facilitarían la exploración del espacio al servir como punto transitorio para misiones tripuladas a otros planetas. La concepción de cualquier diseño requiere la identificación y posterior cuantificación de las solicitaciones a las cuales va a estar expuesta la estructura durante su vida útil. Una estructura construida sobre la superficie lunar va a estar afectada por múltiples amenazas naturales debido a la falta de protección atmosférica y al entorno altamente hostil, entre las que se encuentran los sismos lunares (moonquakes), los impactos de meteoritos, radiación y extremos cambios de temperatura. Existen en la literatura numerosos estudios que involucran diferentes conceptos estructurales acerca del diseño de hábitats extraterrestres. En la concepción de la mayoría de estos diseños estructurales se han considerado las cargas generadas por el peso propio de los elementos y la presión interna a la que se debe someter la estructura para garantizar la vida de las personas. Por el contrario, el número de estudios que han considerado cargas generadas por moonquakes es muy limitado. De igual manera se ha dicho que el diseño de estructuras lunares debe considerar las incertidumbres inherentes a las cargas producidas por diferentes amenazas lunares y la respuesta de las estructuras a tales cargas. Para lograr esto, se ha requerido de la utilización de metodologías de diseño basadas en riesgo que permitan determinar, de forma explícita, el desempeño de las estructuras. Por este motivo en los últimos años se ha propuesto la implementación de la metodología de diseño basada en desempeño en la concepción de estructuras lunares. Sin embargo, esta filosofía de diseño ha sido aplicada particularmente al diseño de plataformas de aterrizaje considerando únicamente impactos de meteoritos. Esta investigación tiene como objetivo principal realizar el análisis y diseño por desempeño de un hábitat lunar sometido a cargas sísmicas. El presente estudio se propone como una continuación del proyecto de investigación denominado Metodología para la caracterización de la amenaza sísmica, generación de sismos sintéticos y espectros de diseño para la Luna, desarrollado en el marco de la convocatoria interna 2019 de la Vicerrectoría de Investigaciones de la Universidad del Valle. Los resultados obtenidos en esta investigación servirán como punto de partida para el diseño por desempeño sísmico del hábitat lunar en esta nueva propuesta. En este estudio el grupo de trabajo contará de nuevo con la asesoría de la profesora Shirley J. Dyke, quien es la directora del Instituto de Investigación en Estructuras Extraterrestres Resilientes en Purdue University, el cual es un macroproyecto financiado por la NASA.</p>
+  <div class="container-fluid p-0 my-0 w-90">
+    <div class="p-0 text-white w-90 mx-auto text-center tit-offset d-flex align-items-end">
+      <h2 class="p-0 fsize">Diseño por desempeño de un hábitat lunar sometido a cargas sísmicas.</h2>
     </div>
+    <div class="d-flex justify-content-around mx-auto">
+      <img src="images/proyecto11.png" class="rounded-5 img-proyecto" alt="">
+      <img src="images/proyecto2.png" class="rounded-5 img-proyecto d-none d-lg-block" alt="">
+    </div>
+    <h4 class="text-start text-white fw-bold mt-2">Resumen:</h4>
+    <p class="text-white def">El creciente interés de la humanidad por la colonización de cuerpos extraterrestres ha propuesto un reto para los ingenieros al tener que adaptar sus conocimientos en la concepción de diseños de hábitats económicos, confortables y seguros. La Luna por ser el cuerpo celeste más cercano a la Tierra se ha convertido en el primer candidato a ser colonizado por el hombre. Futuros hábitats permanentes en la Luna facilitarían la exploración del espacio al servir como punto transitorio para misiones tripuladas a otros planetas. La concepción de cualquier diseño requiere la identificación y posterior cuantificación de las solicitaciones a las cuales va a estar expuesta la estructura durante su vida útil. Una estructura construida sobre la superficie lunar va a estar afectada por múltiples amenazas naturales debido a la falta de protección atmosférica y al entorno altamente hostil, entre las que se encuentran los sismos lunares (moonquakes), los impactos de meteoritos, radiación y extremos cambios de temperatura. Existen en la literatura numerosos estudios que involucran diferentes conceptos estructurales acerca del diseño de hábitats extraterrestres. En la concepción de la mayoría de estos diseños estructurales se han considerado las cargas generadas por el peso propio de los elementos y la presión interna a la que se debe someter la estructura para garantizar la vida de las personas. Por el contrario, el número de estudios que han considerado cargas generadas por moonquakes es muy limitado. De igual manera se ha dicho que el diseño de estructuras lunares debe considerar las incertidumbres inherentes a las cargas producidas por diferentes amenazas lunares y la respuesta de las estructuras a tales cargas. Para lograr esto, se ha requerido de la utilización de metodologías de diseño basadas en riesgo que permitan determinar, de forma explícita, el desempeño de las estructuras. Por este motivo en los últimos años se ha propuesto la implementación de la metodología de diseño basada en desempeño en la concepción de estructuras lunares. Sin embargo, esta filosofía de diseño ha sido aplicada particularmente al diseño de plataformas de aterrizaje considerando únicamente impactos de meteoritos. Esta investigación tiene como objetivo principal realizar el análisis y diseño por desempeño de un hábitat lunar sometido a cargas sísmicas. El presente estudio se propone como una continuación del proyecto de investigación denominado Metodología para la caracterización de la amenaza sísmica, generación de sismos sintéticos y espectros de diseño para la Luna, desarrollado en el marco de la convocatoria interna 2019 de la Vicerrectoría de Investigaciones de la Universidad del Valle. Los resultados obtenidos en esta investigación servirán como punto de partida para el diseño por desempeño sísmico del hábitat lunar en esta nueva propuesta. En este estudio el grupo de trabajo contará de nuevo con la asesoría de la profesora Shirley J. Dyke, quien es la directora del Instituto de Investigación en Estructuras Extraterrestres Resilientes en Purdue University, el cual es un macroproyecto financiado por la NASA.</p>
   </div>
 
       
-  <!--FOOTER-->
-  <div class="container-fluid d-flex justify-content-center p-0 mx-0">
-    <div class="row d-flex justify-content-center">
-      <div class="col">
-        <div class="col text-white text-center">
-          <img src="images/SpaceLAB TITULO.png" width="500" alt="">
-          <p>Daniel Gómez Pizano</p>
-          <p>daniel.gomez@correounivalle.edu.co</p>
-          <p>Universidad del Valle</p>
-          <p>Cali, Colombia</p>
+  <div>
+    <div class="container-fluid d-flex justify-content-center p-0 mx-0">
+      <div class="row d-flex justify-content-center">
+        <div class="col">
+          <div class="col text-white text-center">
+            <img src="images/SpaceLAB TITULO.png" width="500" alt="" class="sp-footer">
+            <p>Daniel Gómez Pizano</p>
+            <p>daniel.gomez@correounivalle.edu.co</p>
+            <p>Universidad del Valle</p>
+            <p>Cali, Colombia</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <footer>
-    <p class="text-white text-center">© Copyright 2022 - SPACELAB. Todos los derechos reservados.</p>
-  </footer>
+    <footer>
+      <p class="text-white text-center">© Copyright 2022 - SPACELAB. Todos los derechos reservados.</p>
+    </footer>
   </div>
 </section>
 
@@ -100,7 +100,7 @@
 <!--PREVIEW-->
 
 <button type="button" class="btn btn-danger btn-floating btn-return">
-  <i class="fas fa-arrow-left"></i> Volver
+  <i class="fas fa-arrow-left"></i>
 </button>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
