--- a/proyectos.html
+++ b/proyectos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,14 +13,14 @@
 </head>
 <body>
     
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid mx-4">
-        <div>
-            <a class="navbar-brand" href="#">
-                <img src="images/70_Rojo.jpg" alt="" width="50">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0" id="menu">
+    <div class="container-fluid fondo-sm">
+        <div class="logos-nav"> 
+            <a class="navbar-brand" href="https://www.univalle.edu.co">
+                <img src="images/70_Rojo.jpg" alt="" width="50" class="uv-nav">
             </a>
             <a class="navbar-brand" href="index.html">
-                <img src="images/SpaceLAB TITULO.png" alt="" width="240">
+                <img src="images/SpaceLAB TITULO.png" alt="" width="240" class="sp-nav">
             </a>
         </div>
         <button class="navbar-toggler" 
@@ -57,17 +57,17 @@
 
 <!--PROYECTOS-->
 
-<div class="container-fluid vh-25 p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
-  <h1 class="text-white w-75">Proyectos</h1> 
-</div>
+<section class="wrapper">
+  <div class="container-fluid tit-offset-tit p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
+    <h1 class="text-white width-sm">Proyectos</h1> 
+  </div>
 
-<section>
-  <div class="container-fluid w-75 p-0">
-    <div class="row my-5">
-      <div class="col-5 p-0 text-white d-flex align-items-center def">
-        <h4 class="text-info">Metodología para la caracterización de la amenaza sísmica, generación de sismos sintéticos y espectros de diseño para la luna</h4>
+  <div class="container-fluid p-0 my-5 width-sm">
+    <div class="row w-100 justify-content-center mx-0 mb-5">
+      <div class="col-lg-4 p-0 mx-md-5">
+        <h4 class="text-info def">Metodología para la caracterización de la amenaza sísmica, generación de sismos sintéticos y espectros de diseño para la luna</h4>
       </div>
-      <div class="col-7 text-white d-block m-auto def ps-5 pe-0">
+      <div class="col-lg-6 text-white mx-4 def p-0">
         <p>La necesidad del diseño de estructuras en asentamientos extraterrestres humanos sostenibles, está llevando a caracterizar los diferentes tipos de amenazas a los que se verán expuestas las edificaciones extraterrestres.</p>
         <button type="button" class="btn btn-primary"><a class="text-white text-decoration-none" href="proyecto1.html">Ver mas <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
           <path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
@@ -75,11 +75,11 @@
       </div>
     </div>
 
-    <div class="row my-5">
-      <div class="col-5 p-0 text-white d-flex align-items-center def">
-        <h4 class="text-info">Diseño por desempeño de un habitat lunar sometido a cargas sísmicas</h4>
+    <div class="row w-100 justify-content-center mx-0 mb-5">
+      <div class="col-lg-4 p-0 mx-md-5">
+        <h4 class="text-info def">Diseño por desempeño de un habitat lunar sometido a cargas sísmicas</h4>
       </div>
-      <div class="col-7 text-white d-block m-auto def ps-5 pe-0">
+      <div class="col-lg-6 text-white mx-4 def p-0">
         <p>Una estructura construida sobre la superficie lunar va a estar afectada por múltiples amenazas naturales debido a la falta de protección atmosférica y al entorno altamente hostil, entre las que se encuentran los sismos lunares (moonquakes), los impactos de meteoritos, radiación y extremos cambios de temperatura.</p>
         <button type="button" class="btn btn-primary"><a class="text-white text-decoration-none" href="proyecto2.html">Ver mas <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
           <path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
@@ -87,11 +87,11 @@
       </div>
     </div>
 
-    <div class="row my-5">
-      <div class="col-5 p-0 text-white d-flex align-items-center def">
-        <h4 class="text-info">Diseño por desempeño de un habitat lunar sometido a cargas sísmicas e impactos de meteoritos</h4>
+    <div class="row w-100 justify-content-center mx-0 mb-5">
+      <div class="col-lg-4 p-0 mx-md-5">
+        <h4 class="text-info def">Diseño por desempeño de un habitat lunar sometido a cargas sísmicas e impactos de meteoritos</h4>
       </div>
-      <div class="col-7 text-white d-block m-auto def ps-5 pe-0">
+      <div class="col-lg-6 text-white mx-4 def p-0">
         <p>El diseño de asentamientos humanos extraterrestres seguros y sostenibles representa un gran desafío científico y tecnológico para la humanidad. Futuros hábitats permanentes en la Luna y Marte pueden facilitar la exploración del espacio al servir como puntos transitorios de misiones tripuladas a otros planetas.</p>
         <button type="button" class="btn btn-primary"><a class="text-white text-decoration-none" href="proyecto3.html">Ver mas <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
           <path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
@@ -102,22 +102,24 @@
 
       
   <!--FOOTER-->
-  <div class="container-fluid d-flex justify-content-center p-0 mx-0">
-    <div class="row d-flex justify-content-center">
-      <div class="col">
-        <div class="col text-white text-center">
-          <img src="images/SpaceLAB TITULO.png" width="500" alt="">
-          <p>Daniel Gómez Pizano</p>
-          <p>daniel.gomez@correounivalle.edu.co</p>
-          <p>Universidad del Valle</p>
-          <p>Cali, Colombia</p>
+
+  <div>
+    <div class="container-fluid d-flex justify-content-center p-0 mx-0">
+      <div class="row d-flex justify-content-center">
+        <div class="col">
+          <div class="col text-white text-center">
+            <img src="images/SpaceLAB TITULO.png" width="500" alt="" class="sp-footer">
+            <p>Daniel Gómez Pizano</p>
+            <p>daniel.gomez@correounivalle.edu.co</p>
+            <p>Universidad del Valle</p>
+            <p>Cali, Colombia</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <footer>
-    <p class="text-white text-center">© Copyright 2022 - SPACELAB. Todos los derechos reservados.</p>
-  </footer>
+    <footer>
+      <p class="text-white text-center">© Copyright 2022 - SPACELAB. Todos los derechos reservados.</p>
+    </footer>
   </div>
 </section>
 
