--- a/tesis2.html
+++ b/tesis2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,25 +13,25 @@
 </head>
 <body>
     
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid mx-4">
-      <div>
-          <a class="navbar-brand" href="#">
-              <img src="images/70_Rojo.jpg" alt="" width="50">
-          </a>
-          <a class="navbar-brand" href="index.html">
-              <img src="images/SpaceLAB TITULO.png" alt="" width="240">
-          </a>
-      </div>
-      <button class="navbar-toggler" 
-              type="button"  
-              data-bs-toggle="collapse" 
-              data-bs-target="#navbarSupportedContent" 
-              aria-controls="navbarSupportedContent" 
-              aria-expanded="false" 
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-      </button>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0" id="menu">
+    <div class="container-fluid fondo-sm">
+        <div class="logos-nav"> 
+            <a class="navbar-brand" href="https://www.univalle.edu.co">
+                <img src="images/70_Rojo.jpg" alt="" width="45" class="uv-nav">
+            </a>
+            <a class="navbar-brand" href="index.html">
+                <img src="images/SpaceLAB TITULO.png" alt="" width="250" class="sp-nav pt-2">
+            </a>
+        </div>
+        <button class="navbar-toggler" 
+                type="button"  
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse flex-lg justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav text-uppercase">
                 <li class="nav-item">
@@ -58,36 +58,38 @@
 <!--PROYECTO 1-->
 
 <section>
-  <div class="container-fluid p-0 my-6 w-75">
-    <div class="p-0">
-      <h2 class="mb-5 text-white vh-25 p-0 d-flex justify-content-center text-center align-items-end">Desarrollo de una aplicación para el análisis de los registros sísmicos lunares.</h2>
-      <div class="d-flex justify-content-around mx-auto">
-        <img src="images/signal moon.JPG" width="400px" class="rounded-5" alt="">
-        <img src="images/Signal moon 2.JPG" width="400px" class="rounded-5" alt="">
-      </div>
-      <h4 class="text-start text-white fw-bold mt-2">Resumen:</h4>
-      <p class="text-white def">El desarrollo de civilizaciones lunares se hace una idea cada día más real. A partir de la misión Apollo 11, para los científicos se abrió una ventana a un nuevo mundo por explorar y colonizar. Aunque este mundo nuevo brinda muchas incertidumbres y en la construcción se deben tener en cuenta muchas amenazas, los sismos no son la excepción. La red sísmica lunar fue instalada por el programa Apollo desde 1969, permitiendo detectar sismos de diferentes tipos, de los cuales se evidenció que algunos sismos llegaron a tener magnitudes de 5 en la escala de Richter. Este trabajo propone el desarrollo de un software llamado SignalMoon para el procesamiento de señales sísmicas lunares y visibilidad de parámetros sísmicos. Este software se desarrolló a partir de la herramienta appdesigner de Matlab. A partir de los registros ofrecidos por la NASA, se descargaron y procesaron 28 sismos superficiales, 20 sismos producidos por meteoritos y 20 sismos profundos. A estos registros sísmicos se les aplicó procesamiento de señales, además, se manipularon a través de la función de transferencia inversa del sismómetro para tener unidades de aceleración en m·s−2. Esta aplicación permite visualizar los registros sísmicos en unidades digitales y unidades de aceleración. Por otra parte, permite que el usuario pueda procesar los sismos según su criterio y descargarlos. SignalMoon permite visualizar espectros de respuesta, y el contenido frecuencial de cada señal junto con sus parámetros de intensidad sísmica. Los resultados obtenidos por los parámetros de intensidad sísmica muestran que aunque el PGA tiene valores muy pequeños estos resultados corresponden a epicentros de sismos a más de 600 km de distancia a la estación. Se aplicó el mismo análisis a registros de la tierra, los cuales fueron adquiridos por sismómetros a 700 Km de distancia y se evidenciaron magnitudes similares. La información proporcionada por esta aplicación permite realizar un diseño estructural preliminar con la información recogida.</p>
+  <div class="container-fluid p-0 my-0 w-90">
+    <div class="p-0 text-white w-90 mx-auto text-center tit-offset d-flex align-items-end">
+      <h2 class="p-0 fsize">Desarrollo de una aplicación para el análisis de los registros sísmicos lunares.</h2>
     </div>
+    <div class="d-flex justify-content-around mx-auto">
+      <img src="images/signal moon.JPG" width="400px" class="rounded-5 img-proyecto" alt="">
+      <img src="images/Signal moon 2.JPG" width="400px" class="rounded-5 img-proyecto d-none d-md-block" alt="">
+    </div>
+    <h4 class="text-start text-white fw-bold mt-2">Resumen:</h4>
+    <p class="text-white def">El desarrollo de civilizaciones lunares se hace una idea cada día más real. A partir de la misión Apollo 11, para los científicos se abrió una ventana a un nuevo mundo por explorar y colonizar. Aunque este mundo nuevo brinda muchas incertidumbres y en la construcción se deben tener en cuenta muchas amenazas, los sismos no son la excepción. La red sísmica lunar fue instalada por el programa Apollo desde 1969, permitiendo detectar sismos de diferentes tipos, de los cuales se evidenció que algunos sismos llegaron a tener magnitudes de 5 en la escala de Richter. Este trabajo propone el desarrollo de un software llamado SignalMoon para el procesamiento de señales sísmicas lunares y visibilidad de parámetros sísmicos. Este software se desarrolló a partir de la herramienta appdesigner de Matlab. A partir de los registros ofrecidos por la NASA, se descargaron y procesaron 28 sismos superficiales, 20 sismos producidos por meteoritos y 20 sismos profundos. A estos registros sísmicos se les aplicó procesamiento de señales, además, se manipularon a través de la función de transferencia inversa del sismómetro para tener unidades de aceleración en m·s−2. Esta aplicación permite visualizar los registros sísmicos en unidades digitales y unidades de aceleración. Por otra parte, permite que el usuario pueda procesar los sismos según su criterio y descargarlos. SignalMoon permite visualizar espectros de respuesta, y el contenido frecuencial de cada señal junto con sus parámetros de intensidad sísmica. Los resultados obtenidos por los parámetros de intensidad sísmica muestran que aunque el PGA tiene valores muy pequeños estos resultados corresponden a epicentros de sismos a más de 600 km de distancia a la estación. Se aplicó el mismo análisis a registros de la tierra, los cuales fueron adquiridos por sismómetros a 700 Km de distancia y se evidenciaron magnitudes similares. La información proporcionada por esta aplicación permite realizar un diseño estructural preliminar con la información recogida.</p>
   </div>
 
       
   <!--FOOTER-->
-  <div class="container-fluid d-flex justify-content-center p-0 mx-0">
-    <div class="row d-flex justify-content-center">
-      <div class="col">
-        <div class="col text-white text-center">
-          <img src="images/SpaceLAB TITULO.png" width="500" alt="">
-          <p>Daniel Gómez Pizano</p>
-          <p>daniel.gomez@correounivalle.edu.co</p>
-          <p>Universidad del Valle</p>
-          <p>Cali, Colombia</p>
+
+  <div>
+    <div class="container-fluid d-flex justify-content-center p-0 mx-0">
+      <div class="row d-flex justify-content-center">
+        <div class="col">
+          <div class="col text-white text-center">
+            <img src="images/SpaceLAB TITULO.png" width="500" alt="" class="sp-footer">
+            <p>Daniel Gómez Pizano</p>
+            <p>daniel.gomez@correounivalle.edu.co</p>
+            <p>Universidad del Valle</p>
+            <p>Cali, Colombia</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <footer>
-    <p class="text-white text-center">© Copyright 2022 - SPACELAB. Todos los derechos reservados.</p>
-  </footer>
+    <footer>
+      <p class="text-white text-center">© Copyright 2022 - SPACELAB. Todos los derechos reservados.</p>
+    </footer>
   </div>
 </section>
 
@@ -100,7 +102,7 @@
 <!--PREVIEW-->
 
 <button type="button" class="btn btn-danger btn-floating btn-return">
-  <i class="fas fa-arrow-left"></i> Volver
+  <i class="fas fa-arrow-left"></i>
 </button>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
