Media queries actualizadas

--- a/argentinacong.html
+++ b/argentinacong.html
@@ -58,8 +58,9 @@
 <!--Congreso Bogota-->
 
 <section class="cuerpo">
+  <div class="headertitulo w-100"></div>
   <div class="container-fluid p-0 my-0 w-90">
-    <div class="p-0 text-white w-90 mx-auto text-center tit-offset2 d-flex align-items-end">
+    <div class="p-0 text-white w-90 mx-auto text-center d-flex align-items-end">
       <h2 class="p-0 fsize">XXVII Jornadas Argentinas de Ingeniería Estructural. Rosario, Argentina, 2022.</h2>
     </div>
   </div>
@@ -70,13 +71,13 @@
     <div class="carousel-inner carousel-inner-cong">
       <div class="carousel-item active carousel-item-cong">
         <img src="images/Carlos_Argentina.JPG" class="d-block w-100 opacity-75 img-congresos" alt="...">
-        <div class="carousel-caption d-none d-sm-block" style="animation-delay: 1s">
+        <div class="carousel-caption d-none d-sm-block dark-text rounded-5" style="animation-delay: 1s">
           <h2 class="mb-0 tit-h2">DISEÑO DE HÁBITATS LUNARES: UNA VISIÓN DESDE LA INGENIERÍA ESTRUCTURAL</h2>
       </div>
       </div>
       <div class="carousel-item carousel-item-cong">
         <img src="images/Paula_Argentina.JPG" class="d-block w-100 opacity-75 img-congresos" alt="...">
-        <div class="carousel-caption d-none d-sm-block" style="animation-delay: 1s">
+        <div class="carousel-caption d-none d-sm-block dark-text rounded-5" style="animation-delay: 1s">
           <h2 class="mb-0 tit-h2">PROCESAMIENTO Y ANÁLISIS DE SEÑALES SÍSMICAS LUNARES</h2>
       </div>
       </div>
