--- a/bogotacong.html
+++ b/bogotacong.html
@@ -58,9 +58,10 @@
 <!--Congreso Bogota-->
 
 <section class="cuerpo">
-  <div class="container-fluid p-0 mt-0 mb-4 width-sm">
+  <div class="headertitulo w-100"></div>
+  <div class="container-fluid p-0 mt-0 mb-4 w-90">
     <div class="p-0">
-      <h2 class="text-white tit-offset2 p-0 d-flex text-center align-items-end fsize">X Congreso Nacional de Ingeniería Sísmica (CNIS). Bogota, Colombia, 2022.</h2>
+      <h2 class="text-white w-90 text-center mx-auto">X Congreso Nacional de Ingeniería Sísmica (CNIS). Bogota, Colombia, 2022.</h2>
     </div>
   </div>
 
