--- a/contacto.html
+++ b/contacto.html
@@ -57,12 +57,13 @@
 
 <!--CONTACT0-->
 
-<div class="container-fluid tit-offset-tit p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
-  <h1 class="text-white width-sm">Contacto</h1> 
+<div class="headertitulo w-100"></div>
+<div class="container-fluid p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
+  <h1 class="text-white w-90 my-4">Contacto</h1> 
 </div>
 
 <section class="cuerpo">
-  <div class="container-fluid p-0 mt-4 mb-5 width-sm">
+  <div class="container-fluid p-0 mt-4 mb-5 w-90">
     <div class="p-0 mb-5">
       <h2 class="text-info mb-5">Director del Proyecto</h2>
       <p class="text-white def">Daniel Gómez Pizano</p>
