--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         </div>
         <div class="carousel-caption d-block animated bounceInLeft dark-text mb-6 rounded-5 text-uppercase" 
         style="animation-delay: 2s;">
-          <p class="animated bounceInLeft mx-0 w-100" style="animation-delay: 2s">Grupo de Investigación en Infraestructura Civil Inteligente, RISK.</p>
-          <p class="animated bounceInLeft mx-0 w-100" style="animation-delay: 2s">Director: Daniel Gómez Pizano PhD.</p>
+          <h5 class="animated bounceInLeft mx-0 w-100" style="animation-delay: 2s">Grupo de Investigación en Infraestructura Civil Inteligente, RISK.</h5>
+          <h5 class="animated bounceInLeft mx-0 w-100" style="animation-delay: 2s">Director: Daniel Gómez Pizano PhD.</h5>
         </div>
       </div>
         <div class="carousel-item">
@@ -97,12 +97,12 @@
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev d-none d-md-block" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next d-none d-md-block" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
       <span class="visually-hidden">Next</span>
@@ -117,7 +117,7 @@
           <img src="images/astronaut-g1aa004214_1920.jpg" class="w-100 mx-auto d-flex align-self-center imgsomos" alt="">
         </div>
         <div class="col-md-6 p-0 d-flex justify-content-center mx-4">
-          <div class="text-white q-somos">
+          <div class="text-white w-100">
             <h4 class="text-uppercase animated bounceInLeft text-center" style="animation-delay: 2s">Quienes somos</h4>
             <p class="def animated bounceInLeft" style="animation-delay: 3s">El proyecto SPACELAB fue creado por el grupo de Investigación en Infraestructura Civil Inteligente y Resiliente (RISK) y se encarga de fomentar la investigación multidisciplinar e interinstitucional, enfocada en el desarrollo de nuevo conocimiento básico y aplicado que contribuya a la solución de problemas de infraestructura civil lunar.</p>
           </div>
