--- a/integrantes.html
+++ b/integrantes.html
@@ -58,18 +58,19 @@
 <!--INTEGRANTES-->
 
 <section class="wrapper">
-  <div class="container-fluid tit-offset-tit p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
-    <h1 class="text-white w-90">Integrantes</h1> 
+  <div class="headertitulo w-100"></div>
+  <div class="container-fluid p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
+    <h1 class="text-white w-90 my-4">Integrantes</h1> 
   </div>
 
   <!--DOCENTES-->
 
   <section>
     <div class="container-fluid my-5 p-0 d-flex justify-content-center align-items-end">
-      <h2 class="text-white w-75 tit-h2">Docentes</h2> 
+      <h2 class="text-white w-90 tit-h2">Docentes</h2> 
     </div>
 
-    <div class="container-fluid w-75 p-0 my-5 grid-sm">
+    <div class="container-fluid p-0 my-5 grid-sm">
       <div class="row bordeslist">
         <div class="col-md-4 bordeslist cols p-0 d-flex justify-content-center align-items-center">
           <img src="images/Daniel_Gomez.jpg" alt="" class="imgdocentes">
@@ -127,10 +128,10 @@
     <!--Estudiantes-->
 
     <div class="container-fluid my-5 p-0 d-flex justify-content-center align-items-end">
-      <h2 class="text-white w-75 tit-h2">Estudiantes</h2> 
+      <h2 class="text-white w-90 tit-h2">Estudiantes</h2> 
     </div>
 
-    <div class="container-fluid w-75 p-0 my-5 grid-sm">
+    <div class="container-fluid p-0 my-5 grid-sm">
       <div class="row bordeslist">
         <div class="col-md-4 bordeslist cols p-0 d-flex justify-content-center align-items-center">
           <img src="images/Santiago_Ruiz.jpg" alt="" class="imgdocentes">
