--- a/proyectos.html
+++ b/proyectos.html
@@ -58,8 +58,9 @@
 <!--PROYECTOS-->
 
 <section class="wrapper">
-  <div class="container-fluid tit-offset-tit p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
-    <h1 class="text-white width-sm">Proyectos</h1> 
+  <div class="headertitulo w-100"></div>
+  <div class="container-fluid p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
+    <h1 class="text-white w-90 my-4">Proyectos</h1> 
   </div>
 
   <div class="container-fluid p-0 my-5 width-sm">
