--- a/publicacion1.html
+++ b/publicacion1.html
@@ -61,11 +61,12 @@
 
 <section>
   <div class="container-fluid p-0 my-0 w-90">
-    <div class="p-0 text-white w-90 mx-auto text-center tit-offset2 d-flex align-items-end">
-      <h2 class="p-0 fsize">Preliminary Approach to Asses the Seismic Hazard on a lunar site.</h2>
+    <div class="headertitulo w-100"></div>
+    <div class="p-0 text-white w-90 mx-auto text-center d-flex align-items-end">
+      <h2 class="p-0">Preliminary Approach to Asses the Seismic Hazard on a lunar site.</h2>
     </div>
     <div class="w-75 d-flex justify-content-around mx-auto">
-      <img src="images/Santiago-tesis2.png" width="300px" class="rounded-5 img-proyecto d-none d-md-block" alt="">
+      <img src="images/Santiago-tesis2.png" width="300px" class="rounded-5 img-proyecto d-none d-lg-block" alt="">
       <img src="images/Santiago-tesis3.png" width="300px" class="rounded-5 img-proyecto" alt="">
     </div>
     <h4 class="text-start fw-bold mt-2 text-white">Abstract:</h4>
