--- a/resultados.html
+++ b/resultados.html
@@ -57,14 +57,15 @@
 
 <!--Resultados-->
 
-<div class="container-fluid tit-offset-tit p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
-  <h1 class="text-white width-sm">Resultados</h1> 
+<div class="headertitulo w-100"></div>
+<div class="container-fluid p-0 d-flex justify-content-center align-items-end overlay-image2"style="background-image:url(images/fondo1.jpg);">
+  <h1 class="text-white w-90 my-4">Resultados</h1> 
 </div>
 
 <!--TESIS-->
 
 <section class="cuerpo">
-  <div class="container-fluid p-0 my-4 width-sm">
+  <div class="container-fluid p-0 my-4 w-90">
     <div class="p-0">
       <h2 class="mb-5 text-white text-left">Tesis</h2>
       <h4 class="text-info def">Evaluación preliminar de la amenaza sísmica en un emplazamiento lunar</h4>
@@ -87,7 +88,7 @@
 
    <!--CONGRESOS-->
 
-  <div class="container-fluid p-0 my-5 width-sm">
+  <div class="container-fluid p-0 my-5 w-90">
     <h2 class="mb-5 text-white">Congresos</h2>
     <div class="row my-4">
       <div class="col-md-5">
@@ -120,7 +121,7 @@
 
   <!--PUBLICACIONES-->
 
-  <div class="container-fluid p-0 my-5 width-sm">
+  <div class="container-fluid p-0 my-5 w-90">
     <h2 class="mb-5 text-white">Publicaciones</h2>
     <div class="row my-4">
       <div class="col-md-5">
@@ -139,7 +140,7 @@
 
   <!--CONFERENCE PAPERS-->
 
-  <div class="container-fluid p-0 my-5 width-sm">
+  <div class="container-fluid p-0 my-5 w-90">
     <h2 class="mb-5 text-white">Ponencias</h2>
     <div class="row my-4">
       <div class="col-md-5">
@@ -153,7 +154,7 @@
 
   <!--SOFTWARE-->
 
-  <div class="container-fluid p-0 my-5 width-sm">
+  <div class="container-fluid p-0 my-5 w-90">
     <h2 class="mb-5 text-white">Software</h2>
     <div class="row my-4">
       <div class="col-md-5">
