--- a/tesis1.html
+++ b/tesis1.html
@@ -59,7 +59,8 @@
 
 <section>
   <div class="container-fluid p-0 my-0 w-90">
-    <div class="p-0 text-white w-90 mx-auto text-center tit-offset d-flex align-items-end">
+    <div class="headertitulo w-100"></div>
+    <div class="p-0 text-white w-90 mx-auto text-center d-flex align-items-end">
       <h2 class="p-0 fsize">Evaluación preliminar de la amenaza sísmica de un emplazamiento lunar.</h2>
     </div>
       <div class="d-flex justify-content-around mx-auto">
