--- a/proyecto1.html
+++ b/proyecto1.html
@@ -59,11 +59,12 @@
 
 <section>
   <div class="container-fluid p-0 my-0 w-90">
-    <div class="p-0 text-white w-90 mx-auto text-center tit-offset d-flex align-items-end">
-      <h2 class="p-0 fsize">Metodología para la caracterización de la amenaza sísmica, generación de sismos sintéticos y espectros de diseño para la luna.</h2>
+    <div class="headertitulo w-100"></div>
+    <div class="p-0 text-white w-90 mx-auto text-center d-flex align-items-end">
+      <h2 class="p-0 mb-4">Metodología para la caracterización de la amenaza sísmica, generación de sismos sintéticos y espectros de diseño para la luna.</h2>
     </div>
     <div class="d-flex justify-content-around mx-auto">
-      <img src="images/Santiago-tesis2.png" class="rounded-5 img-proyecto d-none d-lg-block" alt="">
+      <img src="images/Santiago-tesis2.png" class="rounded-5 img-proyecto d-none d-md-block" alt="">
       <img src="images/Santiago-tesis3.png" class="rounded-5 img-proyecto" alt="">
     </div>
     <h4 class="text-start text-white fw-bold mt-2">Resumen:</h4>
