--- a/emavicong.html
+++ b/emavicong.html
@@ -55,13 +55,13 @@
     </div>
   </nav>
 
-<!--Congreso Bogota-->
+<!--Congreso EMAVI-->
 
 <section class="cuerpo">
   <div class="headertitulo w-100"></div>
   <div class="container-fluid p-0 mt-0 mb-4 w-90">
     <div class="p-0">
-      <h2 class="text-white w-90 text-center mx-auto">X Congreso Nacional de Ingeniería Sísmica (CNIS). Bogota, Colombia, 2022.</h2>
+      <h2 class="text-white w-90 text-center mx-auto">Semana Universitaria "Gestión Tecnológica e Innovación en el campo Aeroespacial"</h2>
     </div>
   </div>
 
@@ -70,15 +70,15 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade carousel-cong my-4" data-bs-ride="carousel">
     <div class="carousel-inner carousel-inner-cong">
       <div class="carousel-item active carousel-item-cong">
-        <img src="images/Carlos_Bogota.jpeg" class="d-block w-100 opacity-75 img-congresos" alt="...">
+        <img src="images/Carlos_emavi.JPG" class="d-block w-100 opacity-75 img-congresos" alt="...">
         <div class="carousel-caption d-none d-sm-block dark-text rounded-5" style="animation-delay: 1s">
-          <h4 class="mb-0 tit-h2">ANÁLISIS SÍSMICO PRELIMINAR DE UN HABITAT LUNAR.</h4>
+          <h4 class="mb-0 tit-h2">ANÁLISIS SÍSMICO MODAL ESPECTRAL DE UN HABITAT LUNAR</h4>
       </div>
       </div>
       <div class="carousel-item carousel-item-cong">
-        <img src="images/CCasentamiento.jpg" class="d-block w-100 opacity-75 img-congresos" alt="...">
+        <img src="images/Paula_Emavi.JPG" class="d-block w-100 opacity-75 img-congresos" alt="...">
         <div class="carousel-caption d-none d-sm-block dark-text rounded-5" style="animation-delay: 1s">
-          <h4 class="mb-0 tit-h2">PROCESAMIENTO Y ANÁLISIS DE SEÑALES SÍSMICAS LUNARES</h4>
+          <h4 class="mb-0 tit-h2">DESARROLLO DE UNA APLICACIÓN PROCESAMIENTO Y ANÁLISIS DE LOS REGISTROS SÍSMICOS LUNARES</h4>
       </div>
       </div>
     </div>
