--- a/resultados.html
+++ b/resultados.html
@@ -117,6 +117,22 @@
         </svg></a></button>
       </div>
     </div>
+    <div class="row my-4">
+      <div class="col-md-5">
+        <h4 class="text-info def">Semana Universitaria "Gestión Tecnológica e Innovación en el campo Aeroespacial. Bogota, Colombia, 2022."</h4>
+      </div>
+      <div class="col-md-7 def text-white">
+        <p class="text-white def">
+          - Desarrollo de una aplicación para el procesamiento y análisis de los registros sísmicos lunares
+        </p>
+        <p class="text-white def">
+          - Análisis sísmico modal espectral de un hábitat lunar
+        </p>
+        <button type="button" class="btn btn-primary"><a class="text-white text-decoration-none" href="emavicong.html">Ver mas <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
+          <path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
+        </svg></a></button>
+      </div>
+    </div>
   </div>
 
   <!--PUBLICACIONES-->
